# langs

./: .gitignore
c/Step1/: CMakeLists.txt  compile_commands.json  main.c  readme.org  test_main.cpp
c/iot/: Makefile  bar.c  foo.c  main.c
c/iot/tests/: commMtp.c  fahr2Celsius.c  test.c
c/socket/: main.c
elixir/start-guide/: dbg.exs  example.exs
julia/: README.md
julia/algorithm/: README.md
julia/business/: asset.jl  index.jl  realestate.jl
julia/chemistry/: index.jl
julia/differences/: c_cpp.md
julia/hello/: calculus.jl  script.jl
julia/jump/: chair2.jl
julia/math/: efficiency.jl  file.jl  functions.jl  index.jl  logistic.jl  macros.jl  plots.jl  tables.jl  unicode.jl
julia/math/fouriertransform/: index.jl
julia/opencv/: opencv.jl
julia/pluto/: cat.jl  pizza.jl
luas/mods/KoreanMapTitle/: mod.info
ocaml/v5-1/hello/: README.md
rust/fcpx_title_generator/: Cargo.toml
rust/fcpx_title_generator/src-tauri/: Cargo.toml  tauri.conf.json
rust/hello-tokio/: Cargo.toml
rust/hello-tokio/examples/: hello-redis.rs
rust/hello-tokio/src/: connection.rs  frame.rs  mini-tokio-lib.rs
rust/luna-wasm/: Cargo.toml
rust/luna-wasm/src/: clock.rs  counter.rs  index.html  main.rs
rust/mini-tokio/src/: main.rs
rust/minigrep/: Cargo.toml
rust/minigrep/src/: lib.rs  main.rs
rust/money/: Cargo.toml
rust/submilli/: Cargo.toml  README.md  bun.lockb  index.ts  package.json  tailwind.config.js
rust/surreal/: Cargo.toml
rust/surreal/src/: main.rs
zig/full_autonomouse/: build.zig
zig/nnl-zig/: build.zig
zig/sqlite-clone-with-zig/: build.zig
(+94 files in other folders)
