[package]
name = "surreal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.30.0", features = ["full"] }
